SP 3/production/wordpress/rule-ingress-nginx.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: production
  annotations:
    ## Untuk menaikan batas upload file
    nginx.org/client-max-body-size: "10m"
    ## Memaksa jalan di https
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    ## Service Location n Characters
    - host: blog.sdcilsy-beta.my.id
      http:
        paths:
          # - path: /
          - backend:
              serviceName: wordpress
              servicePort: 80
